2005-03-23 Vladimir Hirsl
	Moved ConsoleOutputSniffer from make.core plugin. 
	Added minimal console parser interface.
	+ src/org/eclipse/cdt/core/IConsoleParser.java
	+ src/org/eclipse/cdt/internal/core/ConsoleOutputSniffer.java
	
2005-03-19 Alain Magloire
	PR 87336: Did not check if the resource exists.
	* model/org/eclipse/cdt/internal/core/model/Archive.java
	* model/org/eclipse/cdt/internal/core/model/Binary.java

2005-03-18 Alain Magloire
	Export the PathEntry Variable to the outside world.
	* src/org/eclipse/cdt/internal/core/CCorePluginResources.properties
	* src/org/eclipse/cdt/internal/core/PathEntryVariableManager.java
	* src/org/eclipse/cdt/internal/core/PathEntryVariableResolver.java
	* plugin.properties
	* plugin.xml

2005-03-14 Alain Magloire
	Fix NPEs: PathEntryManager should be created first, since it will
	be use by other components.
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java
	* src/org/eclipse/cdt/core/CCorePlugin.java
	* plugin.xml

2005-03-14 Bogdan Gheorghe
	Added a NPE check to path entry manager

	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java
	
2005-03-13 Bogdan Gheorghe
	Added support for new indexer framework
	
	* model/org/eclipse/cdt/core/model/CoreModel.java
	* model/org/eclipse/cdt/internal/core/model/CModelManager.java
	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java
	* src/org/eclipse/cdt/core/CCorePlugin.java
	* plugin.xml
	
2005-03-12 Alain Magloire
	Plan item 79518: for PathEntry variable manager.
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java
	* src/org/eclipse/cdt/core/resources/IPathEntryVariableManager.java
	* src/org/eclipse/cdt/core/resources/PathEntryVariableChangeEvent.java
	* src/org/eclipse/cdt/internal/core/PathEntryVariableManager.java

2005-03-03 Alain Magloire
	Part of plan item 79518: for PathEntry variable manager.
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java
	* src/org/eclipse/cdt/core/CCorePlugin.java