@@ -1,3 +1,8 @@
+2005-03-23 Alain Magloire
+	Optimize the pathentry markers.
+	* model/org/eclipse/cdt/internal/core/model/BinaryRunner.java
+	* model/org/eclipse/cdt/internal/core/model/PathEntryManger.java
+
 2005-03-23 Vladimir Hirsl
 	Moved ConsoleOutputSniffer from make.core plugin. 
 	Added minimal console parser interface.
